Merge changes up to r1052171 from trunk.
git-svn-id: https://svn.apache.org/repos/asf/axis/axis2/java/rampart/branches/RAMPART-289@1780946 13f79535-47bb-0310-9956-ffa450edef68